--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -388,3 +388,18 @@ collections:
     published: 2024-06-14
     author: Kelley Foster <kelley.foster@aaf.edu.au>
 
+  find-your-registered-services:
+    output: true
+    permalink: /:collection/:name
+    title: Find Your Registered Services
+    summary: A tutorial for finding your registered services
+    category: Connect a Service
+    level: Beginner
+    tags:
+      - tutorial
+    difficulty: 1
+    duration: 5
+    status: draft
+    published: 2024-06-21
+    author: Kelley Foster <kelley.foster@aaf.edu.au>
+
