--- a/.github/workflows/accessibility.yml
+++ b/.github/workflows/accessibility.yml
@@ -32,16 +32,16 @@ jobs:
         with:
           path: ./pa11y_output.txt
 
-      - name: Comment on pull request.
-        uses: thollander/actions-comment-pull-request@master
-        with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          message: '<details><summary>Pa11y testing results</summary>
-
-
-```${{ steps.pa11y_output.outputs.content }}```
-
-</details>'
+#      - name: Comment on pull request.
+#        uses: thollander/actions-comment-pull-request@master
+#        with:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#          message: '<details><summary>Pa11y testing results</summary>
+#
+#
+#```${{ steps.pa11y_output.outputs.content }}```
+#
+#</details>'
 
       - name: Check for pa11y failures.
         if: contains(steps.pa11y_output.outputs.content, 'errno 2')
