--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "doc": "docs"
   },
   "scripts": {
-    "start-detached": "bundle exec jekyll serve --detach",
+    "start-detached": "cd docs && bundle exec jekyll serve --detach",
     "pa11y-ci:sitemap": "pa11y-ci --sitemap http://localhost:4000/sitemap.xml --sitemap-exclude \"/*.pdf\""
   },
   "keywords": [],
