--- a/.github/workflows/accessibility.yml
+++ b/.github/workflows/accessibility.yml
@@ -16,9 +16,13 @@ jobs:
         with:
           ruby-version: 3.1.4
           bundler-cache: true
+          working-directory: docs
 
       - name: Install pa11y-ci dependencies.
         run: npm install
+
+      - name: Install Ruby gems.
+        run: cd docs && bundle install
 
       - name: Start up jekyll server.
         run: npm run start-detached
@@ -32,16 +36,16 @@ jobs:
         with:
           path: ./pa11y_output.txt
 
-#      - name: Comment on pull request.
-#        uses: thollander/actions-comment-pull-request@master
-#        with:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#          message: '<details><summary>Pa11y testing results</summary>
-#
-#
-#```${{ steps.pa11y_output.outputs.content }}```
-#
-#</details>'
+      #      - name: Comment on pull request.
+      #        uses: thollander/actions-comment-pull-request@master
+      #        with:
+      #          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #          message: '<details><summary>Pa11y testing results</summary>
+      #
+      #
+      #```${{ steps.pa11y_output.outputs.content }}```
+      #
+      #</details>'
 
       - name: Check for pa11y failures.
         if: contains(steps.pa11y_output.outputs.content, 'errno 2')
