--- a/.github/workflows/accessibility.yml
+++ b/.github/workflows/accessibility.yml
@@ -19,16 +19,16 @@ jobs:
           working-directory: docs
 
       - name: Install pa11y-ci dependencies.
-        run: npm install
+        run: yarn install
 
       - name: Install Ruby gems.
         run: cd docs && bundle install
 
       - name: Start up jekyll server.
-        run: npm run start-detached
+        run: yarn start-detached
 
       - name: Run pa11y-ci.
-        run: npm run pa11y-ci:sitemap 2>&1 | tee pa11y_output.txt
+        run: yarn pa11y-ci:sitemap 2>&1 | tee pa11y_output.txt
 
       - name: Read pa11y_output file.
         id: pa11y_output
