--- a/.github/workflows/accessibility.yml
+++ b/.github/workflows/accessibility.yml
@@ -28,7 +28,7 @@ jobs:
         run: yarn start-detached
 
       - name: Run pa11y-ci.
-        run: yarn pa11y-ci:sitemap 2>&1 | tee pa11y_output.txt
+        run: yarn pa11y-ci:sitemap --no-sandbox 2>&1 | tee pa11y_output.txt
 
       - name: Read pa11y_output file.
         id: pa11y_output
