--- a/.github/workflows/accessibility.yml
+++ b/.github/workflows/accessibility.yml
@@ -36,12 +36,17 @@ jobs:
         with:
           path: ./pa11y_output.txt
 
+      - uses: jwalton/gh-find-current-pr@89ee5799558265a1e0e31fab792ebb4ee91c016b # v1.3.3
+        id: finder
+        with:
+          state: all
+
       - name: Summarise and post PR comment
         uses: ausaccessfed/workflows/.github/actions/summarise@main
         with:
           OUTPUT_FILES: pa11y_output.txt
           ENABLE_PR: 'true'
-          PR_NUMBER: ${{ github.event.pull_request.number }}
+          PR_NUMBER: ${{ steps.finder.outputs.pr }}
           TITLE: 'Accessibility Report'
           SUCCESS: ${{ !contains(steps.pa11y_output.outputs.content, 'errno 2') }}
 
